# htmltab

./: .landscape.yml  .travis.yml  404.html  LICENSE  README.md  README.rst  htmltab.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yml  format.yml  lint.yml  publish_docs.yml  run_tests.yml
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  usage.md
docs/examples/: diff-tables.md  filter-rows.md
examples/diff-tables/: index.html
examples/filter-rows/: index.html
htmltab/: __init__.py  cli.py  types.py  utils.py
search/: search_index.json
src/htmltab/: cli.py  types.py  utils.py
tests/: conftest.py  test_cli.py
tests/fixtures/: basic.csv  basic.html  basic.tsv  basic_eur_gbp.csv  basic_european.csv  countries.html  countries_custom_nulls.csv  countries_default_nulls.csv  countries_no_nulls.csv  ragged.csv  ragged.html  three.html  three_table1.csv  three_table2.csv  three_table2_keep.csv  three_table3.csv
usage/: index.html
