[project]
name = "htmltab"
version = "0.3.0-dev"
description = "A command-line utility that converts an HTML table into CSV data"
readme = "README.md"
license = { file = "LICENCE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4 ~= 4.13",
    "click ~= 8.1.0",
    "lxml ~= 5.3",
    "cssselect ~= 1.2",
    "requests ~= 2.32",
]

[dependency-groups]
"dev" = [
    "pytest ~= 8.3",
    "pytest-cov ~= 6.0",
    "httmock ~= 1.4",
    "types-lxml>=2024.12.13",
    "types-requests>=2.32.0.20241016",
    "types-beautifulsoup4>=4.12.0.20250204",
]

[project.urls]
Documentation = "https://flother.github.io/htmltab/"
Repository = "https://github.com/flother/htmltab"
Changelog = "https://flother.github.io/htmltab/changelog/"

[project.scripts]
htmltab = "htmltab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
addopts = ["--cov", "htmltab"]
testpaths = ["tests"]
